--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -5,10 +5,10 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch: 
+  workflow_dispatch:      
 
-jobs: 
-  my-first-job:
+jobs:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,3 +16,18 @@ jobs:
         uses: actions/checkout@v3
       - name: build
         run: gradle clean build 
+        
+  checkstyle:
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:       
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Run check style
+      uses: nikitasavinov/checkstyle-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        reporter: 'github-pr-check'
+        tool_name: 'testtool'     
+    
