--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -2,11 +2,11 @@ name: HM CI
 
 on:
   push: 
-    branches: [ "main" ]
+    branches: [ "*" ]
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch:      
-
+  workflow_dispatch:  
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
