--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -19,6 +19,7 @@ jobs:
         
   checkstyle:
     runs-on: ubuntu-latest
+    name: checkstyle
     needs: build
     
     steps:       
@@ -29,5 +30,23 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: 'github-pr-check'
-        tool_name: 'testtool'     
+        tool_name: 'testtool'
+        
+  coverage:
+    runs-on: ubuntu-latest
+    name: coverage
+    needs: build
     
+    steps:       
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Run jococo
+      run: gradle jacocoTestReport
+
+    - name: Add coverage to PR
+      id: jacoco
+      uses: madrapps/jacoco-report@v1.6.1
+      with:
+          paths:
+            ${{ github.workspace }}/**/build/reports/jacoco/test/jacocoTestReport.xml
+          token: ${{ secrets.GITHUB_TOKEN }}
