--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -40,6 +40,10 @@ jobs:
     steps:       
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+          java-version: 1.8
     - name: Run jococo
       run: gradle jacocoTestReport
 
@@ -47,6 +51,7 @@ jobs:
       id: jacoco
       uses: madrapps/jacoco-report@v1.6.1
       with:
-          paths:
-            ${{ github.workspace }}/**/build/reports/jacoco/test/jacocoTestReport.xml
+          paths: |
+            ${{ github.workspace }}/**/build/reports/jacoco/prodNormalDebugCoverage/prodNormalDebugCoverage.xml,
+            ${{ github.workspace }}/**/build/reports/jacoco/**/debugCoverage.xml
           token: ${{ secrets.GITHUB_TOKEN }}
