--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -51,5 +51,6 @@ jobs:
       id: jacoco
       uses: madrapps/jacoco-report@v1.6.1
       with:
-          coverageFile: 'build/reports/jacoco/test/jacocoTestReport.xml'
-          token: ${{ secrets.GITHUB_TOKEN }}
+        paths: |
+            coverageFile: 'build/reports/jacoco/test/jacocoTestReport.xml'
+        token: ${{ secrets.GITHUB_TOKEN }}
