my-workflow.yml

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,8 +1,8 @@
-name: HM CI
+name: my-workflow
 
 on:
   push: 
-    branches: [ "*" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:  
