--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -2,7 +2,7 @@ name: my-workflow
 
 on:
   push: 
-    branches: [ "main" ]
+    branches: [ "*" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:  
