--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -2,7 +2,7 @@ name: my-workflow
 
 on:
   push: 
-    branches: [ "*" ]
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:  
@@ -41,10 +41,7 @@ jobs:
     steps:       
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-          java-version: 1.8
+   
     - name: Run jococo
       run: gradle jacocoTestReport
 
