--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,10 +1,9 @@
-name: my-workflow
+name: CI
 
 on:
   push: 
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  pull_request:    
   workflow_dispatch:  
  
 jobs:
