--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -5,21 +5,25 @@ on:
     branches: [ "main" ]
   pull_request:    
   workflow_dispatch:  
+
+permissions: write-all
  
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest    
 
     steps:
       - name: checkout
         uses: actions/checkout@v3
       - name: build
         run: gradle clean build
-      - uses: actions/upload-artifact@v3
+
+      - name: Jacoco Artifact upload
+        uses: actions/upload-artifact@v3
         with:
-          name: report
-          path: build/report
-        
+          name: jacoco
+          path: build
+  
   checkstyle:
     runs-on: ubuntu-latest
     name: Checkstyle job
@@ -28,13 +32,14 @@ jobs:
     steps:       
     - name: Checkout
       uses: actions/checkout@v2
+      
     - name: Run check style
       uses: nikitasavinov/checkstyle-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         reporter: 'github-pr-check'
-        tool_name: 'testtool'                   
-
+        tool_name: 'testtool' 
+        checkstyle_config: config/checkstyle/checkstyle.xml
         
   coverage:
     runs-on: ubuntu-latest
@@ -44,14 +49,23 @@ jobs:
     steps:       
     - name: Checkout
       uses: actions/checkout@v3
-   
-    - name: Run jococo
-      run: gradle jacocoTestReport
 
-    - name: JaCoCo Report
-      uses: Madrapps/jacoco-report@v1.6.1
-            
+    - name: Jacoco Artifact download
+      uses: actions/download-artifact@v3
       with:
-        paths: |
-            coverageFile: 'build/reports/jacoco/test/jacocoTestReport.xml'
+          name: jacoco
+          path: build
+          
+    - name: Run jococo
+      run: gradle jacocoTestReport   
+          
+    - name: Add coverage to PR
+      id: jacoco
+      uses: madrapps/jacoco-report@v1.6.1
+      with:
+        paths:          
+           build/reports/jacoco/test/jacocoTestReport.xml           
         token: ${{ secrets.GITHUB_TOKEN }}
+        debug-mode: true
+        title: Code Coverage
+        update-comment: true
